<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_connect"
    android:visibility="gone"
    android:background="#EFF4FA">

    <LinearLayout
        android:id="@+id/line_no_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginTop="-40dp"
            android:layout_height="500dp"
            android:src="@drawable/img_no_connection"/>

        <TextView
            android:id="@+id/tv_no_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="-70dp"
            android:textColor="#567FAC"
            android:text="@string/no_con_text"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/no_con_text2"
            android:textAlignment="center"
            android:textColor="#567FAC"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_try_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="35dp"
            android:paddingLeft="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_light"
            android:background="@drawable/btn_try_age"
            android:text="@string/btn_try_age"
            android:textColor="#ffffff"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_connect"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/spinner_progressbar"
        android:indeterminateOnly="true"
        android:visibility="gone"/>
</FrameLayout>