<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarkAbout"
    tools:context=".ui.activities.AboutActivity">

    <ImageView
        android:id="@+id/img_ab_camel"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_logo_camel"/>

    <TextView
        android:id="@+id/tv_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="32sp"
        android:textColor="#51C6D6"
        android:text="@string/text_about_ver"
        android:fontFamily="@font/righteous"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img_ab_camel"/>

    <ImageView
        android:id="@+id/img_line_cer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@+id/tv_creator"
        android:layout_below="@id/tv_ver"
        android:src="@drawable/ab_line_creator"/>

    <TextView
        android:id="@+id/tv_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/roboto_light"
        android:text="@string/tv_creator_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_ver"
        android:layout_marginTop="28dp"
        android:layout_marginStart="10dp"/>

    <ImageView
        android:id="@+id/img_line_mail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/tv_mail"
        android:layout_below="@id/img_line_cer"
        android:src="@drawable/ab_line_mail"/>

    <TextView
        android:id="@+id/tv_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/roboto_light"
        android:text="@string/tv_mail"
        android:layout_below="@id/img_line_cer"
        android:focusableInTouchMode="true"
        android:textIsSelectable="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <ImageView
        android:id="@+id/img_line_telegram"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/tv_telegram"
        android:layout_below="@id/img_line_mail"
        android:src="@drawable/ab_line_telegramm"/>

    <TextView
        android:id="@+id/tv_telegram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_line_mail"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:focusableInTouchMode="true"
        android:textIsSelectable="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_light"
        android:text="@string/tv_telegram"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/about_fon"/>



</RelativeLayout>